# material-haskell-1208

./: README.md
Arrows/: Exercise1.hs  Exercise2.hs
Category/: Functor.hs  Monad.hs
Concurrent/: Helpers.hs  example-1.hs  example-2.hs  example-3.hs  example-4.hs  example-5.hs  example-6.hs
Conduit/: example-1.hs  example-2.hs  example-3.hs  example-4.hs
Existentials/: example-1.hs
Extension/: example-1.hs  example-2.hs
Functors/: Example1.hs  Example2.hs  Example3.hs  Example4.hs
GADTs/: example-2.hs  example-3.hs  example-4.hs  example-5.hs
IoC/: example-1.hs
Javascript/: hs-1.0.0.js
LearnYou/: WriterMonad-01.hs  WriterMonad-02.hs  WriterMonad-03.hs
Lens/lens-exaples/: lens-examples.cabal
Lens/lens-exaples/src/: Main.hs
Monadic/: Reader.hs  State.hs  Writer.hs
RealWorld/chapter_03_Types/: DataKeyword.hs  RecordSyntax.hs
RealWorld/chapter_05_Library/: Exercise01.hs  Exercise02.hs  Exercise03.hs  Exercise04.hs  Prettify.hs  PrettyJSON.hs  Setup.hs  SimpleJSON.hs  mypretty.cabal
RealWorld/chapter_06_Typeclasses/: Exercise01.hs  Exercise02.hs
RealWorld/chapter_07_IO/: Exercise01.hs  Exercise02.hs  Exercise03.hs  Exercise04.hs  Exercise05.hs  input.txt  output.txt
RealWorld/chapter_08_Regexp/: Exercise01.hs
RealWorld/chapter_09_Searching/: Directory.hs  Exercise01.hs  Exercise02.hs  Exercise02.prof  Exercise03.hs  Exercise04.hs  Exercise05.hs  Traverse.hs
RealWorld/chapter_11_Testing/: Exercise01.hs  Exercise02.hs  SimpleJSON.hs
RealWorld/chapter_12_ArrayAndMap/: Exercise01.hs  Exercise02.hs
RealWorld/chapter_15_Monads/: Exercise01.hs  Exercise02.hs  Supply.hs
ResourceT/: example-2.hs
SYB/: example-1.hs  example-2.hs  example-3.hs
Solving/SendPlusMore/: SendPlusMore.hs
StrangeLoop/2011/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs
Transformers/: Example1.hs  Example2.hs  Example3.hs
Tutorial/: Library.hs  Tutorial1.hs  Tutorial1.prj  Tutorial2.hs
Viterbi/example1/: .gitignore  Makefile  example.cabal  viterbi-example
Viterbi/example1/src/: Main.hs
Viterbi/example2/: example.cabal  viterbi-example.py
Viterbi/example2/src/: Main.hs
Viterbi/example3/: LICENSE  example.cabal  viterbi-example.py
Viterbi/example3/src/: Main.hs
WriteYourself/Evaluation I/: exercise-01.cmd  exercise-01.hs  lesson-01.hs  lesson-01.sh  lesson-02.cmd  lesson-02.hs  lesson-02.sh  lesson-03.hs  lesson-03.sh
WriteYourself/FirstSteps/: clean-all.cmd  exercise-01.hs  exercise-02.hs  exercise-03.cmd  exercise-03.hs  exercise-03.sh  lesson-01.hs
WriteYourself/Parsing/: clean-all.sh  exercise-01.hs  exercise-01.sh  exercise-02.cmd  exercise-02.hs  exercise-02.sh  lesson-01.cmd  lesson-01.hs  lesson-02.hs  lesson-03.cmd  lesson-03.hs
